<resources>
    <string name="app_name">AplikasiKu</string>
    <string name="logo_name">AplikasiKu</string>
    <string name="welcome_aplikasiku">Welcome To AplikasiKu</string>
    <string name="sub_welcome">Whats going to happen tomorrow?</string>
    <string name="LOGIN">LOGIN</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_in">Log In</string>
</resources>